# Progressia

./: .clang-format  .gitignore  CMakeLists.txt  README.md
desktop/: main.cpp
desktop/graphics/: glfw_mgmt.cpp  glfw_mgmt.h  glfw_mgmt_details.h  vulkan_adapter.cpp  vulkan_adapter.h  vulkan_buffer.h  vulkan_common.cpp  vulkan_common.h  vulkan_descriptor_set.cpp  vulkan_descriptor_set.h  vulkan_frame.cpp  vulkan_frame.h  vulkan_image.cpp  vulkan_image.h  vulkan_mgmt.cpp  vulkan_mgmt.h  vulkan_physical_device.cpp  vulkan_physical_device.h  vulkan_pick_device.cpp  vulkan_pick_device.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_render_pass.cpp  vulkan_render_pass.h  vulkan_swap_chain.cpp  vulkan_swap_chain.h  vulkan_texture_descriptors.cpp  vulkan_texture_descriptors.h  vulkan_uniform.h  vulkan_uniform.inl
desktop/graphics/shaders/: shader.frag  shader.vert
docs/: BuildingGuide.md  DevelopmentSetupGuide.md
docs/ide_setup/: WindowsCLion.md  WindowsVisualStudio.md
lib/stb/include/stb/: stb_image.h
main/: config.h.in  game.cpp  game.h  logging.cpp  logging.h  meta.h  rendering.h  stb_image.c  util.h
main/rendering/: graphics_interface.h  image.cpp  image.h
tools/: bashlib.sh  build.sh  dev-mode.cmake  glslc.cmake  pre-commit.py  setup.sh  valgrind-memcheck-suppressions.supp
tools/clang-format/: clang-format.yml  use-clang-format.sh
tools/clang-tidy/: clang-tidy.cmake  clang-tidy.yml
tools/cmake/: embed.cmake
tools/cppcheck/: options.txt  suppressions.txt  use-cppcheck.sh
tools/embed/: embed.cmake  embed.py
tools/git/: hook_pre_commit.sh
